--- a/resources/assets/js/handlebars/map_enemy_raid_marker_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_raid_marker_template.handlebars
@@ -9,48 +9,48 @@
     </li>
     <li data-name="star" title="{{ title_raid_marker_star }}" data-toggle="tooltip" class="map_enemy_raid_marker_item">
         <a href="#">
-            <div class="star_enemy_icon" style=""></div>
+            <div class="raid_marker_enemy_icon star_enemy_icon" style=""></div>
         </a>
     </li>
     <li data-name="circle" title="{{ title_raid_marker_circle }}" data-toggle="tooltip"
         class="map_enemy_raid_marker_item">
         <a href="#">
-            <div class="circle_enemy_icon" style=""></div>
+            <div class="raid_marker_enemy_icon circle_enemy_icon" style=""></div>
         </a>
     </li>
     <li data-name="diamond" title="{{ title_raid_marker_diamond }}" data-toggle="tooltip"
         class="map_enemy_raid_marker_item">
         <a href="#">
-            <div class="diamond_enemy_icon" style=""></div>
+            <div class="raid_marker_enemy_icon diamond_enemy_icon" style=""></div>
         </a>
     </li>
     <li data-name="triangle" title="{{ title_raid_marker_triangle }}" data-toggle="tooltip"
         class="map_enemy_raid_marker_item">
         <a href="#">
-            <div class="triangle_enemy_icon" style=""></div>
+            <div class="raid_marker_enemy_icon triangle_enemy_icon" style=""></div>
         </a>
     </li>
     <li data-name="moon" title="{{ title_raid_marker_moon }}" data-toggle="tooltip" class="map_enemy_raid_marker_item">
         <a href="#">
-            <div class="moon_enemy_icon" style=""></div>
+            <div class="raid_marker_enemy_icon moon_enemy_icon" style=""></div>
         </a>
     </li>
     <li data-name="square" title="{{ title_raid_marker_square }}" data-toggle="tooltip"
         class="map_enemy_raid_marker_item">
         <a href="#">
-            <div class="square_enemy_icon" style=""></div>
+            <div class="raid_marker_enemy_icon square_enemy_icon" style=""></div>
         </a>
     </li>
     <li data-name="cross" title="{{ title_raid_marker_cross }}" data-toggle="tooltip"
         class="map_enemy_raid_marker_item">
         <a href="#">
-            <div class="cross_enemy_icon" style=""></div>
+            <div class="raid_marker_enemy_icon cross_enemy_icon" style=""></div>
         </a>
     </li>
     <li data-name="skull" title="{{ title_raid_marker_skull }}" data-toggle="tooltip"
         class="map_enemy_raid_marker_item">
         <a href="#">
-            <div class="skull_enemy_icon" style=""></div>
+            <div class="raid_marker_enemy_icon skull_enemy_icon" style=""></div>
         </a>
     </li>
 </ul>
