--- a/resources/assets/css/affixes.css
+++ b/resources/assets/css/affixes.css
@@ -10,9 +10,9 @@
 .affix_icon_awakened, .affix_icon_beguiling, .affix_icon_bolstering, .affix_icon_bursting, .affix_icon_encrypted,
 .affix_icon_explosive, .affix_icon_fortified, .affix_icon_grievous, .affix_icon_infernal, .affix_icon_infested,
 .affix_icon_inspiring, .affix_icon_necrotic, .affix_icon_prideful, .affix_icon_quaking, .affix_icon_raging,
-.affix_icon_reaping, .affix_icon_relentless, .affix_icon_sanguine, .affix_icon_skittish, .affix_icon_spiteful,
-.affix_icon_storming, .affix_icon_teeming, .affix_icon_tormented, .affix_icon_tyrannical, .affix_icon_unknown,
-.affix_icon_volcanic {
+.affix_icon_reaping, .affix_icon_relentless, .affix_icon_sanguine, .affix_icon_shrouded, .affix_icon_skittish,
+.affix_icon_spiteful, .affix_icon_storming, .affix_icon_teeming, .affix_icon_tormented, .affix_icon_tyrannical,
+.affix_icon_unknown, .affix_icon_volcanic {
     max-width: 100% !important;
     background-size: 100% !important;
     background-image: url('/images/affixes/affixes.png');
@@ -23,99 +23,103 @@
 }
 
 .affix_icon_beguiling {
-    background-position: 0 4%;
+    background-position: 0 3.84%;
 }
 
 .affix_icon_bolstering {
-    background-position: 0 8%;
+    background-position: 0 7.69%;
 }
 
 .affix_icon_bursting {
-    background-position: 0 12%;
+    background-position: 0 11.54%;
 }
 
 .affix_icon_encrypted {
-    background-position: 0 16%;
+    background-position: 0 15.38%;
 }
 
 .affix_icon_explosive {
-    background-position: 0 20%;
+    background-position: 0 19.23%;
 }
 
 .affix_icon_fortified {
-    background-position: 0 24%;
+    background-position: 0 23.07%;
 }
 
 .affix_icon_grievous {
-    background-position: 0 28%;
+    background-position: 0 26.92%;
 }
 
 .affix_icon_infernal {
-    background-position: 0 32%;
+    background-position: 0 30.77%;
 }
 
 .affix_icon_infested {
-    background-position: 0 36%;
+    background-position: 0 34.62%;
 }
 
 .affix_icon_inspiring {
-    background-position: 0 40%;
+    background-position: 0 38.46%;
 }
 
 .affix_icon_necrotic {
-    background-position: 0 44%;
+    background-position: 0 42.31%;
 }
 
 .affix_icon_prideful {
-    background-position: 0 48%;
+    background-position: 0 46.15%;
 }
 
 .affix_icon_quaking {
-    background-position: 0 52%;
+    background-position: 0 50%;
 }
 
 .affix_icon_raging {
-    background-position: 0 56%;
+    background-position: 0 53.84%;
 }
 
 .affix_icon_reaping {
-    background-position: 0 60%;
+    background-position: 0 57.69%;
 }
 
 .affix_icon_relentless {
-    background-position: 0 64%;
+    background-position: 0 61.54%;
 }
 
 .affix_icon_sanguine {
-    background-position: 0 68%;
+    background-position: 0 65.38%;
+}
+
+.affix_icon_shrouded {
+    background-position: 0 69.23%;
 }
 
 .affix_icon_skittish {
-    background-position: 0 72%;
+    background-position: 0 73.08%;
 }
 
 .affix_icon_spiteful {
-    background-position: 0 76%;
+    background-position: 0 76.92%;
 }
 
 .affix_icon_storming {
-    background-position: 0 80%;
+    background-position: 0 80.77%;
 }
 
 .affix_icon_teeming {
-    background-position: 0 84%;
+    background-position: 0 84.61%;
 }
 
 .affix_icon_tormented {
-    background-position: 0 88%;
+    background-position: 0 88.46%;
 }
 
 .affix_icon_tyrannical {
-    background-position: 0 92%;
+    background-position: 0 92.3%;
 }
 
 .affix_icon_unknown {
-    background-position: 0 96%;
+    background-position: 0 96.15%;
 }
 
 .affix_icon_volcanic {
