#1251 Fixed various issues with creating routes for a season, rather than an expansion.
An expansion contains a list of dungeons, and up until now the list of dungeons for a season was tied to whatever was there in an expansion. With SL S4 (and DF S1) this is no longer the case. A season can consist of dungeons from any expansion.
I had already created support for this, but now the site needs to show what dungeons are currently available in the season and the next season (if applicable).

--- a/resources/assets/sass/theme/theme.scss
+++ b/resources/assets/sass/theme/theme.scss
@@ -365,9 +365,9 @@ body {
     color: var($--theme-primary) !important;
   }
 
-  .dropdown-item.selected {
-    background-color: var($--theme-dark) !important;
-  }
+  //.dropdown-item.selected {
+  //  background-color: var($--theme-dark) !important;
+  //}
 
   #map .dropdown-item:hover, .dropdown-item:focus {
     color: black;
