--- a/resources/assets/css/map.css
+++ b/resources/assets/css/map.css
@@ -912,6 +912,10 @@ html, body, #map, #app, .wrapper {
     border: 3px solid #d000ff;
 }
 
+.shrouded {
+    border: 3px solid #810098;
+}
+
 .tormented {
     border: 3px solid #ffffff;
 }
