#1305 Shrouded enemies are now shown in a pull, along with the amount of stacks that you currently have

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_edit_template.handlebars
@@ -34,6 +34,20 @@
                          style="width: 16px; height: 16px; border-radius: 16px;"/>
                 </div>
 
+                <div id="map_killzonessidebar_killzone_{{id}}_has_shrouded" class="col-auto px-2 py-1"
+                     data-toggle="tooltip" title="{{kill_zone_has_shrouded_label}}" style="display: none;">
+                    <span class="shrouded_stacks"></span>
+                    <img class="mt-1" src="/images/enemymodifiers/shrouded.png"
+                         style="width: 16px; height: 16px; border-radius: 16px;"/>
+                </div>
+
+                <div id="map_killzonessidebar_killzone_{{id}}_has_shrouded_zul_gamux" class="col-auto px-2 py-1"
+                     data-toggle="tooltip" title="{{kill_zone_has_shrouded_zul_gamux_label}}" style="display: none;">
+                    <span class="shrouded_stacks"></span>
+                    <img class="mt-1" src="/images/enemymodifiers/shrouded_zul_gamux.png"
+                         style="width: 16px; height: 16px; border-radius: 16px;"/>
+                </div>
+
                 <div id="map_killzonessidebar_killzone_{{id}}_has_inspiring" class="col-auto px-2 py-1"
                      data-toggle="tooltip" title="{{kill_zone_has_inspiring_label}}" style="display: none;">
                     <img class="mt-1" src="/images/enemymodifiers/inspiring.png" style="width: 16px; height: 16px;"/>
