#1305 Shrouded enemies and their stacks now show up when viewing routes as well

--- a/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_view_template.handlebars
+++ b/resources/assets/js/handlebars/map_killzonessidebar_killzone_row_view_template.handlebars
@@ -33,6 +33,20 @@
             <img class="mt-1" src="/images/enemymodifiers/inspiring.png" style="width: 16px; height: 16px;"/>
         </div>
 
+        <div id="map_killzonessidebar_killzone_{{id}}_has_shrouded" class="col-auto px-2 py-1"
+             data-toggle="tooltip" title="{{kill_zone_has_shrouded_label}}" style="display: none;">
+            <span class="shrouded_stacks"></span>
+            <img class="mt-1" src="/images/enemymodifiers/shrouded.png"
+                 style="width: 16px; height: 16px; border-radius: 16px;"/>
+        </div>
+
+        <div id="map_killzonessidebar_killzone_{{id}}_has_shrouded_zul_gamux" class="col-auto px-2 py-1"
+             data-toggle="tooltip" title="{{kill_zone_has_shrouded_zul_gamux_label}}" style="display: none;">
+            <span class="shrouded_stacks"></span>
+            <img class="mt-1" src="/images/enemymodifiers/shrouded_zul_gamux.png"
+                 style="width: 16px; height: 16px; border-radius: 16px;"/>
+        </div>
+
         <div class="col-auto px-2 py-1">
             <h5 class="map_killzonessidebar_killzone_text {{text-class}} pt-1">
                 <span id="map_killzonessidebar_killzone_{{id}}_enemy_forces_cumulative" data-toggle="tooltip"></span>
