#1335 WIP mapping versions are pretty far along now.

--- a/resources/assets/js/handlebars/map_popup_template.handlebars
+++ b/resources/assets/js/handlebars/map_popup_template.handlebars
@@ -3,6 +3,11 @@
         {{map_object_name_pretty}}
     </h4>
     {{{html}}}
-    <button id="map_{{map_object_name}}_edit_popup_submit_{{id}}" class="btn btn-info"
-            type="button">{{submit_label}}</button>
+
+    {{#unless readonly}}
+        <button id="map_{{map_object_name}}_edit_popup_submit_{{id}}" class="btn btn-info"
+                type="button">{{submit_label}}</button>
+    {{else}}
+        {{map_object_readonly_label}}
+    {{/unless}}
 </div>
