--- a/resources/assets/js/handlebars/release_change_row_template.handlebars
+++ b/resources/assets/js/handlebars/release_change_row_template.handlebars
@@ -1,21 +1,25 @@
 <div class="row mt-1 change_{{id}}">
-    <div class="col-2">
-        <input type="text" name="tickets[]" value="{{ticket}}" class="form-control"/>
+    <div class="col">
+        <div class="row">
+            <div class="col-2">
+                <input type="text" name="tickets[]" value="{{ticket}}" class="form-control"/>
+            </div>
+            <div class="col-3">
+                <select name="categories[]" class="selectpicker" data-width="100%">
+                    {{#select category}}
+                        <option value="-1">{{select_category_label}}</option>
+                        {{#categories}}
+                            <option value="{{id}}">{{category}}</option>
+                        {{/categories}}
+                    {{/select}}
+                </select>
+            </div>
+            <div class="col-7">
+                <input type="text" name="changes[]" value="{{change}}" class="form-control"/>
+            </div>
+        </div>
     </div>
-    <div class="col-3">
-        <select name="categories[]" class="selectpicker" data-width="100%">
-            {{#select category}}
-                <option value="-1">{{select_category_label}}</option>
-                {{#categories}}
-                    <option value="{{id}}">{{category}}</option>
-                {{/categories}}
-            {{/select}}
-        </select>
-    </div>
-    <div class="col-6">
-        <input type="text" name="changes[]" value="{{change}}" class="form-control"/>
-    </div>
-    <div class="col-1">
+    <div class="col-auto">
         <button type="button" class="btn btn-danger change_delete_btn">
             <i class="fas fa-trash"></i>
         </button>
