#678 WIP allowing enemies to be coupled to a patrol

--- a/resources/assets/js/handlebars/map_enemy_tooltip_template.handlebars
+++ b/resources/assets/js/handlebars/map_enemy_tooltip_template.handlebars
@@ -50,6 +50,10 @@
             <div class="col-7 no-gutters">{{ attached_to_pack }}</div>
         </div>
         <div class="row">
+            <div class="col-5 no-gutters">{{ attached_to_patrol_label }}</div>
+            <div class="col-7 no-gutters">{{ attached_to_patrol }}</div>
+        </div>
+        <div class="row">
             <div class="col-5 no-gutters">{{ enemy_id_label }}</div>
             <div class="col-7 no-gutters">{{ enemy_id }}</div>
         </div>
