--- a/resources/assets/js/handlebars/map_popup_type_button_template.handlebars
+++ b/resources/assets/js/handlebars/map_popup_type_button_template.handlebars
@@ -2,7 +2,7 @@
     <label class="font-weight-bold" for="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}">{{label}}:</label>
     <div class="row">
         <div class="col">
-            <button id="map_{{map_object_name}}_edit_popup_{{property}}_btn_{{id}}" class="btn btn-{{buttonType}}" data-id="{{id}}">{{buttonText}}</button>
+            <button id="map_{{map_object_name}}_edit_popup_{{property}}_{{id}}" class="btn btn-{{buttonType}}" data-id="{{id}}">{{buttonText}}</button>
         </div>
     </div>
 </div>
