--- a/resources/assets/css/affixes.css
+++ b/resources/assets/css/affixes.css
@@ -11,8 +11,8 @@
 .affix_icon_explosive, .affix_icon_fortified, .affix_icon_grievous, .affix_icon_infernal, .affix_icon_infested,
 .affix_icon_inspiring, .affix_icon_necrotic, .affix_icon_prideful, .affix_icon_quaking, .affix_icon_raging,
 .affix_icon_reaping, .affix_icon_relentless, .affix_icon_sanguine, .affix_icon_shrouded, .affix_icon_skittish,
-.affix_icon_spiteful, .affix_icon_storming, .affix_icon_teeming, .affix_icon_tormented, .affix_icon_tyrannical,
-.affix_icon_unknown, .affix_icon_volcanic {
+.affix_icon_spiteful, .affix_icon_storming, .affix_icon_thundering, .affix_icon_teeming, .affix_icon_tormented,
+.affix_icon_tyrannical, .affix_icon_unknown, .affix_icon_volcanic {
     max-width: 100% !important;
     background-size: 100% !important;
     background-image: url('/images/affixes/affixes.png');
@@ -23,105 +23,113 @@
 }
 
 .affix_icon_beguiling {
-    background-position: 0 3.84%;
+    background-position: 0 3.57%;
 }
 
 .affix_icon_bolstering {
-    background-position: 0 7.69%;
+    background-position: 0 7.14%;
 }
 
 .affix_icon_bursting {
-    background-position: 0 11.54%;
+    background-position: 0 10.71%;
 }
 
 .affix_icon_encrypted {
-    background-position: 0 15.38%;
+    background-position: 0 14.28%;
 }
 
 .affix_icon_explosive {
-    background-position: 0 19.23%;
+    background-position: 0 17.85%;
 }
 
 .affix_icon_fortified {
-    background-position: 0 23.07%;
+    background-position: 0 21.42%;
 }
 
 .affix_icon_grievous {
-    background-position: 0 26.92%;
+    background-position: 0 25%;
 }
 
 .affix_icon_infernal {
-    background-position: 0 30.77%;
+    background-position: 0 28.57%;
 }
 
 .affix_icon_infested {
-    background-position: 0 34.62%;
+    background-position: 0 32.14%;
 }
 
 .affix_icon_inspiring {
-    background-position: 0 38.46%;
+    background-position: 0 35.71%;
 }
 
 .affix_icon_necrotic {
-    background-position: 0 42.31%;
+    background-position: 0 39.28%;
 }
 
 .affix_icon_prideful {
-    background-position: 0 46.15%;
+    background-position: 0 42.85%;
 }
 
 .affix_icon_quaking {
-    background-position: 0 50%;
+    background-position: 0 46.42%;
 }
 
 .affix_icon_raging {
-    background-position: 0 53.84%;
+    background-position: 0 50%;
 }
 
 .affix_icon_reaping {
-    background-position: 0 57.69%;
+    background-position: 0 53.57%;
 }
 
 .affix_icon_relentless {
-    background-position: 0 61.54%;
+    background-position: 0 57.14%;
 }
 
 .affix_icon_sanguine {
-    background-position: 0 65.38%;
+    background-position: 0 60.71%;
 }
 
 .affix_icon_shrouded {
-    background-position: 0 69.23%;
+    background-position: 0 64.28%;
 }
 
 .affix_icon_skittish {
-    background-position: 0 73.08%;
+    background-position: 0 67.85%;
 }
 
 .affix_icon_spiteful {
-    background-position: 0 76.92%;
+    background-position: 0 71.42%;
 }
 
 .affix_icon_storming {
-    background-position: 0 80.77%;
+    background-position: 0 75%;
+}
+
+.affix_icon_thundering {
+    background-position: 0 78.57%;
 }
 
 .affix_icon_teeming {
-    background-position: 0 84.61%;
+    background-position: 0 82.14%;
 }
 
 .affix_icon_tormented {
-    background-position: 0 88.46%;
+    background-position: 0 85.71%;
 }
 
 .affix_icon_tyrannical {
-    background-position: 0 92.3%;
+    background-position: 0 89.28%;
 }
 
 .affix_icon_unknown {
-    background-position: 0 96.15%;
+    background-position: 0 92.85%;
 }
 
 .affix_icon_volcanic {
+    background-position: 0 96.42%;
+}
+
+.affix_icon_next_affix {
     background-position: 0 100%;
 }
