--- a/resources/assets/js/handlebars/import_string_warnings_template.handlebars
+++ b/resources/assets/js/handlebars/import_string_warnings_template.handlebars
@@ -1,5 +1,5 @@
 <div class="alert alert-info" role="alert">
-    <i class="fa fa-info-circle"></i> {{export_notes_label}}
+    <i class="fa fa-info-circle"></i> {{import_notes_label}}
 </div>
 
 <div class="row no-gutters">
