#1544 Outdated mapping versions for routes are now shown in both your route overview and when your route shows in public spaces.

--- a/resources/assets/js/handlebars/team_dungeonroute_table_route_actions_template.handlebars
+++ b/resources/assets/js/handlebars/team_dungeonroute_table_route_actions_template.handlebars
@@ -1,5 +1,6 @@
 <div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+            data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
         {{actions_label}}
     </button>
