--- a/resources/assets/js/handlebars/dungeonroute_table_profile_actions_template.handlebars
+++ b/resources/assets/js/handlebars/dungeonroute_table_profile_actions_template.handlebars
@@ -1,54 +1,70 @@
-<div class="dropdown">
-    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-        {{actions_label}}
-    </button>
-    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <h6 class="dropdown-header">{{sharing_label}}</h6>
-        <a class="dropdown-item dungeonroute-publishedstate text-warning cursor-pointer {{#ifCond published '==' 'unpublished'}} active {{/ifCond}}"
-           data-publickey="{{public_key}}" data-publishedstate="unpublished">
-            <i class="fas fa-plane-arrival"></i> {{publish_state_title_unpublished}}
-        </a>
-        <a class="dropdown-item dungeonroute-publishedstate cursor-pointer {{#ifCond published '==' 'team'}} active {{/ifCond}}"
-           data-publickey="{{public_key}}" data-publishedstate="team">
-            <i class="fas fa-users"></i> {{publish_state_title_team}}
-        </a>
-        <a class="dropdown-item dungeonroute-publishedstate cursor-pointer {{#ifCond published '==' 'world'}} active {{/ifCond}}"
-           data-publickey="{{public_key}}" data-publishedstate="world">
-            <i class="fas fa-globe"></i> {{publish_state_title_world}}
-        </a>
-        <a class="dropdown-item dungeonroute-publishedstate cursor-pointer {{#ifCond published '==' 'world_with_link'}} active {{/ifCond}}"
-           data-publickey="{{public_key}}" data-publishedstate="world_with_link">
-            <i class="fas fa-link"></i> {{publish_state_title_world_with_link}}
-        </a>
+<div class="row no-gutters">
+    <div class="col-auto">
+        <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                {{actions_label}}
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <h6 class="dropdown-header">{{sharing_label}}</h6>
+                <a class="dropdown-item dungeonroute-publishedstate text-warning cursor-pointer {{#ifCond published '=='
+                                                                                                          'unpublished'}} active {{/ifCond}}"
+                   data-publickey="{{public_key}}" data-publishedstate="unpublished">
+                    <i class="fas fa-plane-arrival"></i> {{publish_state_title_unpublished}}
+                </a>
+                <a class="dropdown-item dungeonroute-publishedstate cursor-pointer {{#ifCond published '=='
+                                                                                             'team'}} active {{/ifCond}}"
+                   data-publickey="{{public_key}}" data-publishedstate="team">
+                    <i class="fas fa-users"></i> {{publish_state_title_team}}
+                </a>
+                <a class="dropdown-item dungeonroute-publishedstate cursor-pointer {{#ifCond published '=='
+                                                                                             'world'}} active {{/ifCond}}"
+                   data-publickey="{{public_key}}" data-publishedstate="world">
+                    <i class="fas fa-globe"></i> {{publish_state_title_world}}
+                </a>
+                <a class="dropdown-item dungeonroute-publishedstate cursor-pointer {{#ifCond published '=='
+                                                                                             'world_with_link'}} active {{/ifCond}}"
+                   data-publickey="{{public_key}}" data-publishedstate="world_with_link">
+                    <i class="fas fa-link"></i> {{publish_state_title_world_with_link}}
+                </a>
 
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item dungeonroute-add-tag cursor-pointer" data-publickey="{{public_key}}">
-            <i class="fas fa-tag"></i> {{add_remove_tag_label}}
-        </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item dungeonroute-add-tag cursor-pointer" data-publickey="{{public_key}}">
+                    <i class="fas fa-tag"></i> {{add_remove_tag_label}}
+                </a>
 
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item dungeonroute-clone cursor-pointer" data-publickey="{{public_key}}">
-            <i class="fas fa-clone"></i> {{clone_label}}
-        </a>
-        <a class="dropdown-item dungeonroute-clone-to-team cursor-pointer" data-publickey="{{public_key}}">
-            <i class="fas fa-clone"></i> {{clone_to_team_label}}
-        </a>
-        {{#if show_migrate_to_encrypted }}
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item dungeonroute-migrate-to-encrypted cursor-pointer" data-publickey="{{public_key}}">
-            <i class="fas fa-fast-forward"></i> {{migrate_to_encrypted_label}}
-        </a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item dungeonroute-clone cursor-pointer" data-publickey="{{public_key}}">
+                    <i class="fas fa-clone"></i> {{clone_label}}
+                </a>
+                <a class="dropdown-item dungeonroute-clone-to-team cursor-pointer" data-publickey="{{public_key}}">
+                    <i class="fas fa-clone"></i> {{clone_to_team_label}}
+                </a>
+                {{#if show_migrate_to_encrypted }}
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item dungeonroute-migrate-to-encrypted cursor-pointer"
+                       data-publickey="{{public_key}}">
+                        <i class="fas fa-fast-forward"></i> {{migrate_to_encrypted_label}}
+                    </a>
+                {{/if}}
+                {{#if show_migrate_to_shrouded }}
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item dungeonroute-migrate-to-shrouded cursor-pointer"
+                       data-publickey="{{public_key}}">
+                        <i class="fas fa-fast-forward"></i> {{migrate_to_shrouded_label}}
+                    </a>
+                {{/if}}
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item dungeonroute-delete text-danger cursor-pointer" data-publickey="{{public_key}}">
+                    <i class="fas fa-trash"></i> {{delete_label}}
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        {{#if has_new_mapping_version}}
+            <i class="fas fa-exclamation-triangle text-warning pl-2 pt-2" title="{{new_mapping_version_label}}" data-toggle="tooltip"></i>
         {{/if}}
-        {{#if show_migrate_to_shrouded }}
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item dungeonroute-migrate-to-shrouded cursor-pointer" data-publickey="{{public_key}}">
-                <i class="fas fa-fast-forward"></i> {{migrate_to_shrouded_label}}
-            </a>
-        {{/if}}
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item dungeonroute-delete text-danger cursor-pointer" data-publickey="{{public_key}}">
-            <i class="fas fa-trash"></i> {{delete_label}}
-        </a>
     </div>
 </div>
