--- a/resources/assets/js/handlebars/map_map_icon_select_option_template.handlebars
+++ b/resources/assets/js/handlebars/map_map_icon_select_option_template.handlebars
@@ -1,3 +1,3 @@
 <div class="">
-    <img src="/images/mapicon/{{key}}.png"/> {{name}}
+    <img style="width: {{width}}px; height: {{height}}px" src="/images/mapicon/{{key}}.png"/> {{name}}
 </div>
