--- a/resources/assets/js/handlebars/dungeonroute_table_views_metrics.handlebars
+++ b/resources/assets/js/handlebars/dungeonroute_table_views_metrics.handlebars
@@ -1,6 +1,6 @@
 <div class="row no-gutters">
     <div class="col-auto">
-        <i class="fas fa-eye"></i>
+        <i class="fas fa-eye" data-toggle="tooltip" title="{{views_tooltip_label}}"></i>
     </div>
     <div class="col ml-1">
         <span class="views">{{views}}/{{views_embed}}</span>
@@ -8,7 +8,7 @@
 </div>
 <div class="row no-gutters">
     <div class="col-auto">
-        <i class="fas fa-copy"></i>
+        <i class="fas fa-copy" data-toggle="tooltip" title="{{copy_tooltip_label}}"></i>
     </div>
     <div class="col ml-1">
         <span class="copies">{{copy_view}}/{{copy_embed}}</span>
