--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -22,6 +22,8 @@
 //@import "~jquery-bar-rating/dist/themes/fontawesome-stars.css";
 // Owl Carousel
 @import "~owl.carousel/dist/assets/owl.carousel.min.css";
+// Light Slider
+@import "lightslider/dist/css/lightslider.min.css";
 // Intro.js
 @import "~intro.js/minified/introjs.min.css";
 @import "~intro.js/themes/introjs-dark.css";
